--- a/templates/record_button.mustache
+++ b/templates/record_button.mustache
@@ -39,3 +39,4 @@
     <i class="fa fa-microphone fa-2x" style="vertical-align: middle;"></i>
     {{# str }} accentrecognizer_record, mod_accentrecognizer {{/ str }}
 </button>
+<div class="output" data-role="record-output" style="display: flex; flex-flow: column; justify-content: center;"></div>
