created recognition results template; refactored button to states

--- a/templates/record_button.mustache
+++ b/templates/record_button.mustache
@@ -35,7 +35,7 @@
         type="button"
         style="margin-left: auto; margin-right: auto; width: 300px; max-width: 100%; display: block;"
         data-action="record"
-        data-text="{{# str }} accentrecognizer_stop, mod_accentrecognizer {{/ str }}">
+        data-state="default">
     <i class="fa fa-microphone fa-2x" style="vertical-align: middle;"></i>
     {{# str }} accentrecognizer_record, mod_accentrecognizer {{/ str }}
 </button>
